--- a/FamilyTrip/src/App.css
+++ b/FamilyTrip/src/App.css
@@ -59,20 +59,11 @@
   display: inline-block;
 }
 
-.nav-translucent {
-  backdrop-filter: blur(6px);
-  background-color: rgba(36, 45, 68, 0.45) !important;
-}
-
+.nav-translucent,
 .nav-opaque {
-  backdrop-filter: blur(6px);
-  background-color: rgba(255, 255, 255, 0.589) !important;
-  transition: background-color 0.3s ease;
-}
-
-.nav-opaque .brand-title,
-.nav-opaque .navbar-brand span {
-  color: #0f172a !important;
+  background-color: transparent !important;
+  backdrop-filter: none;
+  box-shadow: none;
 }
 /* --------------------------------------------------- */
 .store-section {
